deploy: f1cae3fa56d4da0162863d6deea9f8ee5364a279

--- a/assets/app.css
+++ b/assets/app.css
@@ -1721,7 +1721,7 @@ article h3 {
   font-size: x-large;
 }
 
-code {
+pre code {
   display: block;
   overflow-x: auto;
   &::before {
@@ -1758,7 +1758,7 @@ code {
     background-color: var(--color-macchiato-base);
   }
 
-  code {
+  pre code {
     &::before {
       background-color: var(--color-macchiato-base);
       color: var(--color-frappe-text);
