deploy: 826cc9f01abd695a02e15acf3395e19c6a4e238b

--- a/assets/app.css
+++ b/assets/app.css
@@ -2193,6 +2193,10 @@ pre code {
   text-transform: capitalize;
 }
 
+.italic {
+  font-style: italic;
+}
+
 .leading-relaxed {
   line-height: 1.625;
 }
