--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -8,6 +8,7 @@
 @layer base {
     html {
         font-family: "ui-sans-serif", "system-ui", "sans-serif";
+        scrollbar-gutter: stable;
     }
 
     a:hover {
