--- a/assets/app.css
+++ b/assets/app.css
@@ -2123,3 +2123,11 @@ pre code {
     color: rgb(138 173 244 / var(--tw-text-opacity, 1))
   }
 }
+
+.\[\&\[data-active\=\'true\'\]\]\:font-bold[data-active='true'] {
+  font-weight: 700
+}
+
+.\[\&\[data-active\=\'true\'\]\]\:opacity-100[data-active='true'] {
+  opacity: 1
+}
