--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -8,14 +8,22 @@
     html {
         font-family: system-ui, sans-serif;
         scrollbar-gutter: stable;
+        color-scheme: light dark;
     }
 
     a:hover {
         color: var(--color-latte-blue);
     }
     body {
-        color: var(--color-latte-text);
-        background-color: var(--color-latte-base);
+        background: light-dark(
+            var(--color-latte-base),
+            var(--color-macchiato-base)
+        );
+        color: light-dark(var(--color-latte-text), var(--color-macchiato-text));
+        min-height: 100vh;
+        font-family:
+            ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas,
+            "Liberation Mono", monospace;
     }
     pre {
         background-color: var(--color-latte-crust);
@@ -96,7 +104,7 @@
             font-size: medium;
         }
 
-        &.elixir::before {
+        &.language-elixir::before {
             content: "elixir";
         }
 
