deploy: cb0a287684fa756d9baf2ba06a1dbd56a5051163

--- a/assets/app.css
+++ b/assets/app.css
@@ -470,17 +470,6 @@
       }
     }
   }
-  .data-\[active\=\'true\'\]\:font-bold {
-    &[data-active='true'] {
-      --tw-font-weight: var(--font-weight-bold);
-      font-weight: var(--font-weight-bold);
-    }
-  }
-  .data-\[active\=\'true\'\]\:opacity-100 {
-    &[data-active='true'] {
-      opacity: 100%;
-    }
-  }
   .sm\:mx-0 {
     @media (width >= 40rem) {
       margin-inline: calc(var(--spacing) * 0);
@@ -534,10 +523,22 @@
       }
     }
   }
+  .\[\&\[data-active\=\'true\'\]\]\:font-bold {
+    &[data-active='true'] {
+      --tw-font-weight: var(--font-weight-bold);
+      font-weight: var(--font-weight-bold);
+    }
+  }
+  .\[\&\[data-active\=\'true\'\]\]\:opacity-100 {
+    &[data-active='true'] {
+      opacity: 100%;
+    }
+  }
 }
 @layer base {
   html {
     scrollbar-gutter: stable;
+    scroll-behavior: smooth;
   }
   a:hover {
     color: light-dark(var(--color-latte-blue), var(--color-macchiato-blue));
